--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,20 +14,17 @@
                 "echo": true,
                 "reveal": "always",
                 "focus": true,
-                "panel": "dedicated",        // Use a dedicated terminal panel
+                "panel": "dedicated",
                 "showReuseMessage": true,
                 "clear": false
             },
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}",   // Ensure the working directory is set correctly
+                "cwd": "${workspaceFolder}",
                 "shell": {
-                    "executable": "/bin/bash",  // Use bash to ensure proper shell script execution
+                    "executable": "/bin/bash",
                     "args": ["-c"]
                 },
-                "env": {
-                    "PLATFORMIO_CLI": "${env:PLATFORMIO_CLI}"  // Ensure PlatformIO environment is used
-                }
             }
         }
     ]
