--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,30 @@
 	"version": "2.0.0",
 	"tasks": [
         {
-            "type": "PlatformIO",
-            "task": "Upload and Monitor (seedlabs_devkit_onboarding)",
-            "problemMatcher": [
-                "$platformio"
-            ],
-            "label": "PlatformIO: Upload and Monitor (seedlabs_devkit_onboarding)"
+            "label": "FLASH RELEASE",
+            "type": "shell",
+            "command": "[ -x ./software/release/release_flash.sh ] || sudo chmod +x ./software/release/release_flash.sh && [ -x ./software/release/download_latest.sh ] || sudo chmod +x ./software/release/download_latest.sh && ./software/release/release_flash.sh",    // Path to your shell script
+            "args": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "dedicated",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}",
+                "shell": {
+                    "executable": "/bin/bash",
+                    "args": ["-c"]
+                },
+            }
         }
     ]
 }
