--- a/platformio.ini
+++ b/platformio.ini
@@ -55,6 +55,7 @@ platform = espressif32@6.8.1
 framework = arduino
 board = esp32-s3-devkitc-1-n16r8v
 board_build.partitions = ./firmware/partitions-16MB-custom.csv
+board_build.filesystem = fatfs
 upload_speed = 921600
 monitor_speed = 115200
 monitor_raw = yes
