Added esp32 exception decoder to monitor filter.

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,7 @@ board = esp32-s3-devkitc-1-n16r8v
 board_build.partitions = ./firmware/partitions-16MB-custom.csv
 upload_speed = 921600
 monitor_speed = 115200
-monitor_raw = yes
+monitor_filters = esp32_exception_decoder
 debug_speed = 1200
 debug_tool = esp-builtin
 lib_deps = 
@@ -140,13 +140,17 @@ build_flags =
     -D LV_CONF_INCLUDE_SIMPLE=1
     -D LV_LVGL_H_INCLUDE_SIMPLE=1
 
+    -D CONFIG_ESP_COREDUMP_ENABLE_TO_NONE=y
+
     ; KNOB ENGAGED TIMEOUT MILISECONDS
     -D KNOB_ENGAGED_TIMEOUT_NONE_PHYSICAL=8000
     -D KNOB_ENGAGED_TIMEOUT_PHYSICAL=30000
 
-    -D ENABLE_LOGGING=1
     -D MODEL='"SmartKnob DevKit v0.1"'
+
+    -D ENABLE_LOGGING=1
     -D LOGGING_CUSTOM_INIT_TITLE=MODEL
+    -D LOGGING_DELAY=1000
 
 
 [env:seedlabs_devkit_inverted_display]
