--- a/platformio.ini
+++ b/platformio.ini
@@ -57,7 +57,7 @@ board = esp32-s3-devkitc-1-n16r8v
 board_build.partitions = ./firmware/partitions-16MB-custom.csv
 upload_speed = 921600
 monitor_speed = 115200
-monitor_raw = yes
+monitor_filters = esp32_exception_decoder
 debug_speed = 1200
 debug_tool = esp-builtin
 lib_deps = 
