--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ __pycache__
 # Release
 software/release/dist/*
 software/release/mac_addresses.txt
+
+# Prevent user from committing their own config.pb
+firmware/data/config.pb
