--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ __pycache__
 
 # Release
 software/release/dist/*
+software/release/temp/
+software/release/esp-idf/
 software/release/mac_addresses.txt
 
 # Prevent user from committing their own config.pb
