Refactored handleNavigationEvent in apps to work better with forwarding handleNavigation to active_app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,9 @@
         "lvgl.h": "c",
         "forward_list": "cpp",
         "set": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "icons.h": "c",
+        "semaphore_guard.h": "c"
     },
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
