--- a/software/web-preact/package.json
+++ b/software/web-preact/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
+    "prettier": "3.3.3",
+    "sass": "^1.80.3",
     "typescript": "^5.6.2",
     "vite": "^5.3.3"
   }
