Logging improvements and cleanup.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,13 +74,15 @@ lib_deps =
 	ayushsharma82/ElegantOTA@^3.1.0
     lvgl/lvgl@^8.4.0
     lovyan03/LovyanGFX@^1.1.12
-    https://github.com/carlhampuswall/logging
+    https://github.com/carlhampuswall/logging#0.2.0
 build_flags = 
     -D SK_WIFI=1
 	-D SK_MQTT=1
 	-D SK_DISPLAY=1
 	-D SK_LEDS=1
 	-D SK_STRAIN=1
+
+    ; -D CONFIG_ARDUINO_LOOP_STACK_SIZE=8192
 	
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
@@ -150,6 +152,7 @@ build_flags =
     -D MODEL='"SmartKnob DevKit v0.1"'
 
     -D ENABLE_LOGGING=1
+    -D VERBOSE_LOGGING_DEFAULT=1
     -D LOGGING_CUSTOM_INIT_TITLE=MODEL
     -D LOGGING_DELAY=1000
 
@@ -181,6 +184,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
     lvgl/lvgl@^8.4.0
     lovyan03/LovyanGFX@^1.1.12
+    https://github.com/carlhampuswall/logging#0.2.0
 
 [env:seedlabs_legacy]
 build_flags = 
