--- a/platformio.ini
+++ b/platformio.ini
@@ -82,10 +82,15 @@ build_flags =
 	-D SK_LEDS=1
 	-D SK_STRAIN=1
 	
-	-D SENSOR_MT6701=1
+	-D SENSOR_MT6701=0
 	-D SK_INVERT_ROTATION=1
 	-D MOTOR_WANZHIDA_ONCE_TOP=1
 	-D PIN_MT_CLOCK=13
+
+    -D SENSOR_CH605=1
+    -D PIN_CH605_U=46
+    -D PIN_CH605_V=47
+    -D PIN_CH605_W=48
 	
 	-D ELEGANTOTA_USE_ASYNC_WEBSERVER=0
 	
