Fixed issue with ElegantOTA importing a different version of AsyncTCP than the one we want to use.

--- a/platformio.ini
+++ b/platformio.ini
@@ -73,6 +73,8 @@ lib_deps =
 	lovyan03/LovyanGFX@^1.1.12
     esphome/AsyncTCP-esphome@^2.1.4
 	https://github.com/carlhampuswall/logging#0.2.0
+lib_ignore =
+  AsyncTCP 
 build_flags = 
 	-D SK_WIFI=1
 	-D SK_MQTT=1
@@ -174,6 +176,8 @@ lib_deps =
 	lovyan03/LovyanGFX@^1.1.12
     esphome/AsyncTCP-esphome@^2.1.4
 	https://github.com/carlhampuswall/logging#0.2.0
+lib_ignore =
+  AsyncTCP 
     
 
 [env:seedlabs_legacy]
