Temp fix for not enough mem to create async handling task in AsyncTCP. Lowered stack needed from 8192*2 to 8192.

--- a/platformio.ini
+++ b/platformio.ini
@@ -147,6 +147,8 @@ build_flags =
 	-D LOGGING_CUSTOM_INIT_TITLE=MODEL
 	-D LOGGING_DELAY=1000
 
+    -D CONFIG_ASYNC_TCP_STACK_SIZE=8192
+
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
