--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = seedlabs_devkit
+default_envs = seedlabs_devkit_qspi
 src_dir = firmware/src
 lib_dir = firmware/lib
 include_dir = firmware/include
@@ -47,6 +47,51 @@ build_flags =
 
     -D DO_AUTOMATIC_MOTOR_CALIBRATION=0
 
+[env:seedlabs_devkit_qspi]
+build_flags = 
+    ${env.build_flags}
+	-D SK_ALS=1
+	-D SK_PROXIMITY=1
+	
+	-D PIN_SDA=39
+	-D PIN_SCL=38
+	-D SK_MQTT_BUFFER_SIZE=2048
+	
+	-D SK_DISPLAY_ROTATION=0
+	
+	-D PIN_LED_DATA=12
+	-D NUM_LEDS=72
+	
+	-D PIN_UH=8
+	-D PIN_UL=16
+	-D PIN_VH=18
+	-D PIN_VL=7
+	-D PIN_WH=17
+	-D PIN_WL=15
+	-D PIN_MT_DATA=14
+	-D PIN_MT_CSN=11
+
+	-D TFT_RST=10
+	
+	-D PIN_STRAIN_DO=21
+	-D PIN_STRAIN_SCK=1
+
+    -D DO_AUTOMATIC_MOTOR_CALIBRATION=0
+
+    -D LCD_SDIO0=11
+    -D LCD_SDIO1=13
+    -D LCD_SDIO2=14
+    -D LCD_SDIO3=15
+    -D LCD_SCLK=12
+    -D LCD_CS=10
+    -D LCD_RST=17
+    -D TFT_WIDTH=466
+    -D TFT_HEIGHT=466
+
+    -D LCD_EN=16
+
+    -D TP_INT=9
+
 	
 
 
@@ -73,7 +118,7 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	ayushsharma82/ElegantOTA@^3.1.0
     lvgl/lvgl@^8.4.0
-    lovyan03/LovyanGFX@^1.1.12
+    moononournation/GFX Library for Arduino @^1.5.3
     https://github.com/carlhampuswall/logging#0.1.0
 build_flags = 
     -D SK_WIFI=1
@@ -102,8 +147,6 @@ build_flags =
 	-D TFT_CS=9
 	-D TFT_DC=2
 	-D TFT_BL=-1
-	-D TFT_WIDTH=240
-	-D TFT_HEIGHT=240
 	-D USER_SETUP_LOADED=1
 	-D GC9A01_DRIVER=1
 	-D CGRAM_OFFSET=1
@@ -157,11 +200,15 @@ build_flags =
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
+    -D TFT_WIDTH=240
+	-D TFT_HEIGHT=240
 	-D SK_ALS=0
 
 [env:seedlabs_devkit_github_action_release]
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
+    -D TFT_WIDTH=240
+	-D TFT_HEIGHT=240
 	-D SK_ELEGANTOTA_PRO=1
     -D DO_AUTOMATIC_MOTOR_CALIBRATION=1
 	
@@ -186,6 +233,9 @@ lib_deps =
 [env:seedlabs_legacy]
 build_flags = 
 	${env.build_flags}
+    -D TFT_WIDTH=240
+	-D TFT_HEIGHT=240
+
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
 
