Fixed issue with ESPAsyncWebServer lib.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,8 @@ lib_deps =
     esphome/AsyncTCP-esphome@^2.1.4
 	https://github.com/carlhampuswall/logging#0.2.0
 lib_ignore =
-  AsyncTCP 
+    AsyncTCP 
+    ESPAsyncWebServer
 build_flags = 
 	-D SK_WIFI=1
 	-D SK_MQTT=1
