--- a/platformio.ini
+++ b/platformio.ini
@@ -39,16 +39,13 @@ build_flags =
 	-D PIN_WL=15
 	-D PIN_MT_DATA=14
 	-D PIN_MT_CSN=11
-
+	
 	-D TFT_RST=10
 	
 	-D PIN_STRAIN_DO=21
 	-D PIN_STRAIN_SCK=1
-
-    -D DO_AUTOMATIC_MOTOR_CALIBRATION=0
-
 	
-
+	-D DO_AUTOMATIC_MOTOR_CALIBRATION=0
 
 [env]
 platform = espressif32@6.8.1
@@ -72,15 +69,20 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
 	ayushsharma82/ElegantOTA@^3.1.0
-    lvgl/lvgl@^8.4.0
-    lovyan03/LovyanGFX@^1.1.12
-    https://github.com/carlhampuswall/logging#0.1.0
+	lvgl/lvgl@^8.4.0
+	lovyan03/LovyanGFX@^1.1.12
+    esphome/AsyncTCP-esphome@^2.1.4
+	https://github.com/carlhampuswall/logging#0.2.0
+lib_ignore =
+    AsyncTCP 
+    ESPAsyncWebServer
 build_flags = 
-    -D SK_WIFI=1
+	-D SK_WIFI=1
 	-D SK_MQTT=1
 	-D SK_DISPLAY=1
 	-D SK_LEDS=1
 	-D SK_STRAIN=1
+	
 	
 	-D SENSOR_MT6701=1
 	-D SK_INVERT_ROTATION=1
@@ -109,17 +111,13 @@ build_flags =
 	-D CGRAM_OFFSET=1
 	-D LOAD_GFXFF=1
 	-D SPI_FREQUENCY=70000000
-    -D SPI_READ_FREQUENCY=70000000
+	-D SPI_READ_FREQUENCY=70000000
 	-D SK_BACKLIGHT_BIT_DEPTH=12
 	
 	-D MQTT_MAX_PACKET_SIZE=256
 	
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_NONE
-
-    ; Not certain why these were here please double check if they are needed, does compile and flash without them
-	; -D FASTLED_UNUSABLE_PIN_MASK=0x100740LL
-	; -D SOC_GPIO_VALID_GPIO_MASK=0xFF0EFFFFFF
-	; -D SOC_GPIO_VALID_OUTPUT_GPIO_MASK=0x30EFFFFFF
+	
 	
 	-D SK_ELEGANTOTA_PRO=0
 	
@@ -127,32 +125,30 @@ build_flags =
 	-D SOFT_RESET_SECONDS=5
 	-D HARD_RESET_SECONDS=15
 	
-    -D RELEASE_VERSION='"DEV"'
+	-D RELEASE_VERSION='"DEV"'
 	
 	-D CALIBRATION_WEIGHT=272
 	-D PRESS_WEIGHT=250
+	
+	-D USE_HSPI_PORT=1
+	
+	-I ./firmware/src/display
+	-D LV_CONF_INCLUDE_SIMPLE=1
+	-D LV_LVGL_H_INCLUDE_SIMPLE=1
+	
+	-D CONFIG_ESP_COREDUMP_ENABLE_TO_NONE=y
+	
+	-D KNOB_ENGAGED_TIMEOUT_NONE_PHYSICAL=8000
+	-D KNOB_ENGAGED_TIMEOUT_PHYSICAL=30000
+	
+	-D MODEL='"SmartKnob DevKit v0.1"'
+	
+	-D ENABLE_LOGGING=1
+	-D VERBOSE_LOGGING_DEFAULT=1
+	-D LOGGING_CUSTOM_INIT_TITLE=MODEL
+	-D LOGGING_DELAY=1000
 
-    ; Needed for DMA
-    ; -D ESP32_DMA=1 ; already defined in tft_espi add back when remiving tft_espi
-    -D USE_HSPI_PORT=1
-
-    ; LVGL
-    -I ./firmware/src/display
-    -D LV_CONF_INCLUDE_SIMPLE=1
-    -D LV_LVGL_H_INCLUDE_SIMPLE=1
-
-    -D CONFIG_ESP_COREDUMP_ENABLE_TO_NONE=y
-
-    ; KNOB ENGAGED TIMEOUT MILISECONDS
-    -D KNOB_ENGAGED_TIMEOUT_NONE_PHYSICAL=8000
-    -D KNOB_ENGAGED_TIMEOUT_PHYSICAL=30000
-
-    -D MODEL='"SmartKnob DevKit v0.1"'
-
-    -D ENABLE_LOGGING=1
-    -D LOGGING_CUSTOM_INIT_TITLE=MODEL
-    -D LOGGING_DELAY=1000
-
+    -D CONFIG_ASYNC_TCP_STACK_SIZE=8192
 
 [env:seedlabs_devkit_inverted_display]
 build_flags = 
@@ -163,7 +159,7 @@ build_flags =
 build_flags = 
 	${env:seedlabs_devkit.build_flags}
 	-D SK_ELEGANTOTA_PRO=1
-    -D DO_AUTOMATIC_MOTOR_CALIBRATION=1
+	-D DO_AUTOMATIC_MOTOR_CALIBRATION=1
 	
 	!echo '-D RELEASE_VERSION=\\"'$RELEASE_VERSION'\\"'
 	!echo '-D COMMIT_HASH=\\"'$COMMIT_HASH'\\"'
@@ -179,16 +175,20 @@ lib_deps =
 	askuric/Simple FOC@2.3.3
 	adafruit/Adafruit_VL53L0X@^1.2.2
 	knolleary/PubSubClient@^2.8
-    lvgl/lvgl@^8.4.0
-    lovyan03/LovyanGFX@^1.1.12
-    https://github.com/carlhampuswall/logging#0.1.0
+	lvgl/lvgl@^8.4.0
+	lovyan03/LovyanGFX@^1.1.12
+    esphome/AsyncTCP-esphome@^2.1.4
+	https://github.com/carlhampuswall/logging#0.2.0
+lib_ignore =
+  AsyncTCP 
+    
 
 [env:seedlabs_legacy]
 build_flags = 
 	${env.build_flags}
 	-D SK_ALS=0
 	-D SK_PROXIMITY=0
-
+	
 	-D SK_DISPLAY_ROTATION=0
 	-D NUM_LEDS=8
 	
@@ -207,5 +207,5 @@ build_flags =
 	-D TFT_RST=6
 	-D STRAIN_DO=38
 	-D STRAIN_SCK=2
-
-    -D DO_AUTOMATIC_MOTOR_CALIBRATION=0
+	
+	-D DO_AUTOMATIC_MOTOR_CALIBRATION=0
